style: fix detail view grid on mobile

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -63,6 +63,7 @@ mark {
 
 .details-panel {
   grid-template-columns: 1fr;
+  grid-template-rows: auto 1fr;
 }
 
 @screen xl {
